# oidcms

./: .dockerignore  Cargo.toml  Dockerfile  README.md  auth.sh  compose.yml  run.sh  test.sh  token.sh
.github/workflows/: docker.yml
fixtures/: user.json
script/: authenticate.sh  health.sh  token.sh  userinfo.sh
src/: authorize.rs  bounded_string.rs  config.rs  main.rs  pkce.rs  state.rs
src/authorize/: extractor.rs  handler.rs  mod.rs
src/crypto/: mod.rs
src/data/: access_token.rs  id_token.rs  mod.rs  pkce.rs  time.rs
src/extractor/: authorize.rs  mod.rs  token.rs
src/handler/: authorize.rs  mod.rs  token.rs
src/parameter/: access_token.rs  client_id.rs  code.rs  id_token.rs  mod.rs  pkce.rs  scope.rs  state.rs  subject.rs  time.rs  user_id.rs
src/parameters/: client_id.rs  mod.rs  pkce.rs  state.rs
src/serde_utils/: bounded_string.rs  jwt.rs  mod.rs
src/session/: mod.rs
src/state/: mod.rs
src/token/: extractor.rs  handler.rs  jwt.rs  mod.rs
src/userinfo/: mod.rs
templates/: form.html
