[package]
name = "oidcms"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
base64 = "0.22.1"
config = "0.14.1"
derive_more = { version = "1.0.0", features = [
	"as_ref",
	"display",
	"from",
	"from_str",
] }
email_address = "0.2.9"
headers = "0.4.0"
http-serde = "2.1.1"
jsonwebtoken = "9.3.0"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["base64"] }
sha2 = "0.10.8"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["signal", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
